--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <body>
   <main id="main">
     <h1 id="title">Acontecimientos historicos de Argentina</h1>
+  <figure id="img-div">
+    <img id="image" 
+    src="https://media.ambito.com/p/25016da7fbe58c4be08187a5218d1bc7/adjuntos/239/imagenes/037/350/0037350993/puerto-madero.jpg"
+    alt="imagen con vistas a puerto madero en Argentina" />
+    <figcaption id="img-caption"> Puerto Madero es un barrio emblemático de la ciudad de Buenos Aires, Argentina. Ubicado en la zona este del centro de la ciudad, se caracteriza por su arquitectura moderna y su posición a lo largo de la costa del Río de la Plata. </figcaption>
+  </figure>
+
   </main>
   </body>
 </html>
