--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
       </ul>
 
     </section>
+    <h3>
+          Si tienes tiempo deberias leer mas sobre los acontecimientos historicos de este pais 
+          <a
+            id="tribute-link"
+            href="https://es.wikipedia.org/wiki/Historia_de_la_Argentina"
+            target="_blank"
+            >Wikipedia entry</a
+          >.
+        </h3>
 
   </main>
   </body>
